--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "webpack"
   ],
   "author": "Waseem Ahmed",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  }
 }
