--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "license": "MIT",
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "ts-loader": "^2.0.0",
+    "typescript": "^2.1.5",
+    "typings": "^2.1.0"
   }
 }
