--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
   "author": "Waseem Ahmed",
   "license": "MIT",
   "dependencies": {
+    "copy-webpack-plugin": "^4.0.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.28.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "ts-loader": "^2.0.0",
     "typescript": "^2.1.5",
-    "typings": "^2.1.0"
+    "typings": "^2.1.0",
+    "webpack": "^2.2.1",
+    "webpack-merge": "^2.6.1"
   }
 }
