--- a/package.json
+++ b/package.json
@@ -14,14 +14,22 @@
   "author": "Waseem Ahmed",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^6.7.2",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.1",
     "es6-promise": "^4.0.5",
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.0",
+    "node-sass": "^4.5.0",
+    "postcss": "^5.2.11",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.2.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
     "typescript": "^2.1.5",
     "typings": "^2.1.0",
