--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "^6.7.2",
+    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap-loader": "^2.0.0-beta.20",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "es6-promise": "^4.0.5",
