--- a/package.json
+++ b/package.json
@@ -42,5 +42,14 @@
     "webpack": "^2.2.1",
     "webpack-merge": "^2.6.1",
     "whatwg-fetch": "^2.0.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "concurrently": "^3.1.0",
+    "json-server": "^0.9.4",
+    "rimraf": "^2.5.4",
+    "sass-lint": "^1.10.2",
+    "tslint": "^4.4.2",
+    "webpack-dev-server": "^2.3.0"
   }
 }
